<resources>
    <string name="app_name">Ex1_E1_DavidCarroSalinas</string>
    <string name="mi_primer_examen">Mi primer examen</string>
    <string name="limpiar">Limpiar</string>
    <string name="_20">20%</string>
    <string name="_10">10%</string>
    <string name="seleccione_el_descuento">Seleccione el descuento</string>
    <string name="_5">5%</string>
    <string name="introduzca_un_precio">Introduzca un precio</string>
</resources>